--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,9 @@ kraken_viral_db/k2_*/
 kraken_viral_db/demo_db/
 
 # 结果文件
-virus_results/clean_data/*
-virus_results/non_redundant_data/*
-virus_results/annotation_results/*
+# virus_results/clean_data/*
+# virus_results/non_redundant_data/*
+# virus_results/annotation_results/*
 !virus_results/.gitkeep
 
 # 测试数据
@@ -31,10 +31,10 @@ virus_data/*
 *.tmp
 *.temp
 *.log
-*.html
-*.pdf
-*.png
-*.json
+# *.html
+# *.pdf
+# *.png
+# *.json
 
 # 系统文件
 .DS_Store
